force-app/main/default/objects/PositionFieldValues__mdt/PositionFieldValues__mdt.object-meta.xml
<CustomObject>
    <label>Position Field Values</label>
    <pluralLabel>PositionFieldValues</pluralLabel>
</CustomObject>