force-app/main/default/objects/PositionFieldValues__mdt/fields/PicklistValue__c.field-meta.xml
<CustomField>
    <fullName>PicklistValue__c</fullName>
    <description>Value to be displayed to the user for a specific parameter</description>
    <label>Picklist Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>