force-app/main/default/objects/PositionFieldValues__mdt/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Parent Production Key record</description>
    <label>Postion</label>
    <referenceTo>Position__mdt</referenceTo>
    <relationshipLabel>PositionFieldValues</relationshipLabel>
    <relationshipName>PositionFieldValues</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>