force-app/main/default/objects/PositionFieldValues__mdt/fields/PositionFieldValueNumber__c.field-meta.xml
<CustomField>
    <fullName>PositionFieldValueNumber__c</fullName>
    <label>Position Field Value Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>